# ml-slicer

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml
src/mlslicer/: __init__.py  api.py  build_subgraphs.py  checks.py  config.py  factgen.py  global_collector.py  irgen.py  main.py  scope.py  utils.py
src/mlslicer/datalog/: main.dl
src/mlslicer/tools/pyright/: package-lock.json
