[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-slicer"
version = "0.1.0"
requires-python = "==3.8.*"

dependencies = [
    "importlib-resources>=5.4",
    "pandas",
    "numpy",
    "torch",
    "scikit-learn",
    "networkx",
    "astor"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

