[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-slicer"
version = "0.1.0"
requires-python = ">=3.8.2"

dependencies = [
    "importlib-resources>=5.4",
    "astunparse",
    "pandas",
    "numpy",
    "torch",
    "scikit-learn",
    "networkx",
    "astor"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

